--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -2,4 +2,10 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  background-color: #F0F0F3;
+  /* color: #394D5F; */
+}
+
+body {
+  background-color: #F0F0F3;
 }
